# tribune

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CONSIDERATIONS.md  DESIGN_DECISIONS.md  Makefile  README.md  TODO.md  client.json  cmake_install.cmake  generate_certs.sh  server.json  tribune_test_build
apps/: client_app.cpp  server_app.cpp
apps/example/: client_app.cpp  server_app.cpp
apps/example/include/: data_collection_module.hpp
apps/example/src/: data_collection_module.cpp
apps/federated-machinelearning/: CMakeCache.txt  README.md  client_app.cpp  server_app.cpp
apps/federated-machinelearning/include/: federated_computation.hpp  federated_logout_module.hpp
apps/federated-machinelearning/scripts/: run_demo.py
apps/federated-machinelearning/src/: federated_computation.cpp  federated_logout_module.cpp
build_test/: CMakeCache.txt
curl/: client_listen.sh  test_connect.sh  test_peers.sh  test_submit.sh
examples/: test_build.cpp
examples/simple/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  server.cpp
include/client/: client.hpp  client_config.hpp  data_collection_module.hpp  tribune_client.hpp
include/crypto/: signature.hpp
include/events/: events.hpp
include/mpc/: mpc_computation.hpp  mpc_module.hpp  secure_sum.hpp
include/protocol/: parser.hpp
include/server/: client_state.hpp  server_config.hpp  tribune_server.hpp
include/utils/: connection_pool.hpp  error_codes.hpp  logging.hpp
scripts/: run_demo.py
src/client/: client.cpp  data_collection_module.cpp  tribune_client.cpp  tribune_client.cpp.bak2  tribune_client.cpp.bak3  tribune_client.cpp.bak4
src/crypto/: signature.cpp
src/mpc/: sum_computation.cpp
src/protocol/: parser.cpp
src/server/: client_state.cpp  tribune_server.cpp
